test/typeConstBlockLastUse2.slq
// args: --run

def id[τ:*](moved x:τ)⇒x;

def main(){
	n:=3;
	a:=vector(n,0)~[id(n)]~forget(n); /// error
	return a:!ℕ[];
}
